--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-html, body {
+/* html, body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
@@ -7,4 +7,4 @@ html, body {
 
 * {
   box-sizing: border-box;
-}
+} */
