--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,38 @@
-html, body {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-  width: 100%;
+/* App.css or themes.css */
+
+/* Light Theme */
+.light-theme {
+  background-color: #ffffff;
+  color: #322c2c;
+  /* ... other light theme styles */
 }
 
-* {
-  box-sizing: border-box;
+.light-theme .button {
+   background-color: #101110;
+  border-radius: 50px;
+  font-size: 22px;
+ 
+  color: #ffffff;
+  
+}
+
+/* Dark Theme */
+.dark-theme {
+  background-color: #2f2525;
+  color: #ffffff;
+  /* ... other dark theme styles */
+}
+
+.dark-theme .button {
+  background-color: #101110;
+  border-radius: 50px;
+  font-size: 22px;
+  align-content: start;
+  /* color: #333333; */
+  /* border: 1px solid #555555; */
+}
+
+/* Base styles that apply to both */
+body {
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
