--- a/frontend/src/pages/home.css
+++ b/frontend/src/pages/home.css
@@ -3,7 +3,7 @@
   /* border: 2px solid black; */
   /* background-color: rgb(183, 193, 193); */
   grid-template-columns: 10% 40% 10% 40%; 
-  height: 100vh;
+  /* height: 100vh; */
   grid-template-rows: auto auto ;
   
 }
